Thu Jul 15 09:27:16 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c:
	- fix from Liam Widdowson for RPC with no parameters
	* src/tds/des.c: commented unused code

Wed Jul 14 22:36:27 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/faq.html added CS_STATUS_RESULT question

Mon Jul 12 11:05:03 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: fix problem with tests and dblib
	* src/dblib/rpc.c: avoid recursion

Mon Jul 12 10:34:12 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: another memory leak fix

Thu Jul 08 11:41:43 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: fixed memory leak

Sat Jul  3 14:05:12 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/token.c ignore spurious TDS_RETURNSTATUS_TOKEN packets
	* src/dblib/dblib.c better comments
	* include/tds.h small reformatting

Sat Jul 03 19:40:23 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/date.c: updated reusing macros

Tue Jun 29 08:37:05 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/convert_error.c:
	- fix test

Mon Jun 28 01:22:12 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c src/tds/config.c applied patches from Christos
	* doc/userguide.sgml small updates and clarifications.

Fri Jun 25 21:41:36 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: fix -Bsymbolic option detect

Fri Jun 25 17:42:40 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: fix problem linking in HP-UX and Mac OS X

Sat Jun 19 01:53:01 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c src/apps/freebcp.h
	* src/dblib/bcp.c src/dblib/dblib.c
	- fixed warnings, and some cleanup

Thu Jun 17 17:38:50 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/dblib.h include/sybdb.h include/tds.h:
	* src/apps/freebcp.c src/apps/freebcp.h src/ctlib/blk.c:
	* src/dblib/bcp.c src/dblib/dblib.c: